--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,5 +31,15 @@
     .h3 {
         @apply text-[20px] xl:text-[24px] leading-[1.1] font-semibold;
     }
+    
+    .text-outline {
+        -webkit-text-stroke: 1px #ffff;
+    }
+    
+    .text-outline-hover {
+        -webkit-text-stroke: 1px #2e9cca;
+    }
+    
 }
+
 
